--- a/views/alter.ejs
+++ b/views/alter.ejs
@@ -9,7 +9,7 @@
            <% for(item of allItem){%>
          
           <div class="card">
-                <a href=""><img src="<%=item.image%>" class="card-img-top" alt="..." style="height:6rem;width:50%;"></a>
+                <a href="#"><img src="<%=item.image%>" class="card-img-top" alt="..." style="height:6rem;width:50%;"></a>
                 <div class="card-body text-center">
                   <h5 class="card-title"><%=item.title%></h5>
                   <h6 class="cad-title">&#8377;<%=item.price.toLocaleString("en-IN")%></h6>
