--- a/views/confirmBuy.ejs
+++ b/views/confirmBuy.ejs
@@ -147,11 +147,18 @@
            
             <div style="border:1px solid grey; margin-bottom:1rem; padding:1rem; border-radius:10px;">
               <input type="radio" name="paymentMethod" id="upi" value="UPI" >
-              <label for="cash">UPI</label>
+              <label for="upi">UPI</label>
             </div>     
            
             <div style="display:flex;justify-content: space-between;">
-                <button type="button" onclick="handleCancel()" class="cancel-order-btn" style=" padding:0.3rem 3rem; background-color: transparent; border:1px solid grey; border-radius:10px;">Cancel</button>
+               
+                    <select name="quantity" id="" style="padding:0.2rem 1.3rem; border-radius:8px;">
+                      <option value="1">Quantity:1</option>
+                       <option value="2">Quantity:2</option>
+                       <option value="3">Quantity:3</option>
+                       <option value="4">Quantity:4</option>
+                    </select>
+
                 <button type="submit" class="confirm-order-btn"  style=" padding:0.3rem 3rem; background-color: #2563EB; color:white; border:1px solid grey; border-radius:10px;">Confirm Purchase</button>
             </div>
         </div>
@@ -198,8 +205,7 @@
         comboInput.style.display = "none";
       }
     }
-
-    const handleOrder=(event)=>{
+     const handleOrder=(event)=>{
             event.preventDefault();
             console.log(event);
             event.target.submit();
