--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,34 +1,70 @@
 <% layout("/layouts/biolerplate") %>
-<div class="row mt-3">
-  <div class="col col-xl-9 offset-xl-2 col-lg-8 offset-lg-2 col-sm-10 offset-sm-1 ">
+
+<div style="max-width:1400px; margin:2rem auto; padding: 1rem;">
   <h2>Edit Details</h2>
  <form action="/admin/<%=item._id%>?_method=PUT" method="post" novalidate class="needs-validation">
-    <div class="mb-3">
-        <label for="title" class="form-label">Title</label><br>
-        <input id="title" type="text" name="item[title]" value="<%=item.title%>" class="form-control" required>
-        <div class="invalid-feedback">Please Enter title</div>
+
+     <div style="margin-bottom:0.5rem; font-size:small;font-weight:bolder; ">
+        <label for="type" class="form-label" style="margin-bottom:0.1rem;">Type</label><br>
+        <input id="type" type="text" name="item[type]" placeholder="Enter type of item like mobiles,laptops,cables" value="<%=item.type%>" class="form-control" required >
+        <div class="invalid-feedback">Please Enter type of item</div>
+     </div>
+
+     <div style="margin-bottom:0.5rem; font-size:small;font-weight:bolder;">
+         <label for="title" class="form-label" style="margin-bottom:0.1rem;">Title</label><br>
+         <input id="title" type="text" name="item[title]" placeholder="Enter title" value="<%=item.title%>" class="form-control" required>
+         <div class="invalid-feedback">Please Enter title</div>
+     </div>
+
+     <div style="margin-bottom:0.5rem; font-size:small;font-weight:bolder;">
+         <label for="description" class="form-label" style="margin-bottom:0.1rem;">Description</label><br>
+         <textarea   id="description" name="item[description]" row="10" col="20"  placeholder="Enter description"  class="form-control" required> <%=item.description%></textarea>
+         <div class="valid-feedback">Good</div>
+     </div>
+
+     <div style="margin-bottom:0.5rem; font-size:small;font-weight:bolder;">
+         <label for="specification" class="form-label" style="margin-bottom:0.1rem;">Specification</label><br>
+         <textarea  id="specification" name="item[specification]" row="10" col="20" placeholder="Enter specification"  class="form-control" required> <%=item.specification%></textarea>
+         <div class="invalid-feedback">Please Enter specification</div>
+     </div>
+
+     <div style="margin-bottom:0.5rem; font-size:small;font-weight:bolder;">
+         <label for="image" class="form-label" style="margin-bottom:0.1rem;">Image/URL/Links</label><br>
+         <input id="image" type="text" name="item[image]" placeholder="Enter Image/URL/Link" value="<%=item.image%>" class="form-control" required>
+         <div class="invalid-feedback">Please give image URL</div>
+     </div>
+
+    
+
+     <div style="display:flex; margin-bottom:0.5rem;">
+
+       <div style="width:50%; margin-right:1rem; font-size:small;font-weight:bolder;">
+         <label for="brand" class="form-label" style="margin-bottom:0.1rem;">Brand</label><br>
+         <input id="brand" type="text" name="item[brand]" placeholder="Enter brand" value="<%=item.brand%>" class="form-control"></label>
+       </div>
+
+       <div style="width:50%; margin-left:1rem; font-size:small;font-weight:bolder;">
+         <label for="color" class="form-label" style="margin-bottom:0.1rem;">Color</label><br>
+         <input id="color" type="text" name="item[color]" placeholder="Enter color" value="<%=item.color%>" class="form-control"></label>
+       </div>
+
+     </div>
+
+     <div style="display:flex;">
+
+       <div style="width:50%; margin-right:1rem; font-size:small;font-weight:bolder;">
+         <label for="warranty" class="form-label" style="margin-bottom:0.1rem;">Warranty</label><br>
+         <input id="warranty" type="text" name="item[warranty]" placeholder="Enter warranty" value="<%=item.warranty%>" class="form-control"></label>
+       </div>
+
+       <div style=" width:50%; margin-left:1rem;margin-bottom:0.5rem; font-size:small;font-weight:bolder;">
+         <label for="price" class="form-label" style="margin-bottom:0.1rem;">Price</label><br>
+         <input id="price" type="text" name="item[price]" placeholder="Enter Price" value="<%=item.price%>" class="form-control" required>
+         <div class="invalid-feedback">Please Enter price</div>
+       </div> 
+
     </div>
-    <div class="mb-3">
-        <label for="description" class="form-label">Description</label><br>
-        <textarea  id="description" name="item[description]" row="10" col="20" class="form-control" required><%=item.description%></textarea>
-        <div class="invalid-feedback">Please type description</div>
-    </div>
-    <div class="mb-3">
-        <label for="specification" class="form-label">Specification</label><br>
-        <textarea  id="specification" name="item[specification]" row="10" col="20" class="form-control" required><%=item.specification%></textarea>
-        <div class="invalid-feedback">Please type specification</div>
-    </div>
-    <div class="mb-3">
-        <label for="image" class="form-label">Image/URL/Links</label><br>
-        <input id="image" type="text" name="item[image]" value="<%=item.image%>" class="form-control" required>
-        <div class="invalid-feedback">Please give image URL</div>
-    </div>
-    <div class="mb-3">
-        <label for="price" class="form-label">Price</label><br>
-        <input id="price" type="text" name="item[price]" value="<%=item.price%>" class="form-control" required>
-        <div class="invalid-feedback">Please Enter price</div>
-    </div>
+
     <button class="btn btn-success col-12">Edit</button>
-</form>
- </div>
+  </form>
 </div>
