--- a/views/orderDetails.ejs
+++ b/views/orderDetails.ejs
@@ -132,7 +132,7 @@
    </div>
 
    <!-- second div -->
-    <a href="/homepage/<%=item.itemID%>/loginShowInfo" style="text-decoration: none; color:black;">
+    <a href="/homepage/<%=item._id%>/loginShowInfo" style="text-decoration: none; color:black;">
     <div class="product-details-container" style="border: 1px solid grey; padding: 1rem; border-radius: 8px; background-color: white; margin-bottom:0.5rem;">
       <b>Product Details:</b>
       <div style="display: flex">
