--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -128,7 +128,7 @@
                   </div>           
                                             
                   <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; width:200px;">
-                    <p style="margin-bottom:0;"><%=order.orderName%></p>                    
+                    <p style="margin-bottom:0; line-height: 1.4rem;"><%=order.orderName%></p>                    
                   </div>                 
           
                
