--- a/public/css/style.css
+++ b/public/css/style.css
@@ -594,12 +594,16 @@ p
     color: #f0f0f0;
     cursor: pointer;
   }
+  .rating span.selected{
+    color:gold;
+  }
   
   .star1,.star2,.star3,.star4{
    
     color: #FFD700; 
     transition: color 0.3s;
   }
+    
   
   .star:hover,
   .star.active {
@@ -844,6 +848,32 @@ input:focus{
     transform: scale(1.01);
     box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3); 
 }
+/* styling review page */
+.review-container{
+    transition:0.1s;
+    border-radius:8px;
+   
+}
+.review-container:hover{
+    transform: scale(1.01);
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
+}
+.review-textarea::placeholder{
+    font-size:15px;
+    text-indent: 10px;
+}
+.rating span 
+{
+    font-size: 30px;
+    color: #ccc;
+    cursor: pointer;
+}
+.rating span.selected{
+    color:gold;
+}
+
+
+
 
 
 
