--- a/views/loginHomepage.ejs
+++ b/views/loginHomepage.ejs
@@ -108,17 +108,48 @@
         </div>
 
           <!-- slider -->
-          <div class="slide-container">
-            <img src="https://plus.unsplash.com/premium_photo-1680985551009-05107cd2752c?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="slide" >
-            <img src="https://gizmore.in/cdn/shop/products/SMWGHPWYHCZWASZW_0.jpg?v=1671441749&width=1080"  style="object-fit:contain" alt="" class="slide">
-            <img src="https://m.media-amazon.com/images/I/714mr6GxecL.jpg" style="object-fit:contain" alt="" class="slide">
-            <img src="https://www.pcworld.com/wp-content/uploads/2023/10/cpu-hub-100758206-orig.jpg?quality=50&strip=all" alt="" class="slide">
-            <img src="https://assets.myntassets.com/dpr_1.5,q_60,w_400,c_limit,fl_progressive/assets/images/19957602/2022/12/23/5cdba1af-3409-488b-98ae-0bbb0d8594fc1671768370314-OnePlus-Unisex-Headphones-991671768370140-3.jpg" style="object-fit:contain" alt="" class="slide">
-            <img src="https://static1.makeuseofimages.com/wordpress/wp-content/uploads/2018/08/best-mouse-keyboard-combos.jpg" alt="" class="slide">
-            <img src="https://hips.hearstapps.com/hmg-prod/images/best-over-ear-headphones-1527009080.jpg" alt="" class="slide">
-      
-            <span class="material-symbols-outlined prev">arrow_back_ios</span>
-            <span class="material-symbols-outlined next">arrow_forward_ios</span>
+           <!-- slider -->
+  <div class="slide-container" style="background-color: white;">
+    <img
+      src="https://media.istockphoto.com/id/178716575/photo/mobile-devices.jpg?s=612x612&w=0&k=20&c=9YyINgAbcmjfY_HZe-i8FrLUS43-qZh6Sx6raIc_9vQ="
+      alt=""
+      class="slide"
+    />
+    <img
+      src="https://i.dell.com/is/image/DellContent/content/dam/images/products/electronics-and-accessories/dell/pointing-devices/ms300/ms300-kbm-04-bk.psd?fmt=pjpg&pscan=auto&scl=1&wid=4141&hei=3475&qlt=100,1&resMode=sharp2&size=4141,3475&chrss=full&imwidth=5000"
+      alt=""
+      class="slide"
+    />
+    <img
+      src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/MYMC2?wid=1144&hei=1144&fmt=jpeg&qlt=90&.v=1601053171000"
+      alt=""
+      class="slide"
+    />
+    <img
+      src="https://m.media-amazon.com/images/I/71bEYFvV5lL.jpg"
+      alt=""
+      class="slide"
+    />
+    <img
+      src="https://nzxt.com/assets/cms/34299/1658869818-canvas-collection-hero-bezel.png?auto=format&bg=FFFFFF&fit=max&h=460&w=900"
+      alt=""
+      class="slide"
+    />
+    <img
+      src="https://i.pcmag.com/imagery/roundups/00gpxuhAEtpruF528FIBeeh-4..v1569492695.jpg"
+      alt=""
+      class="slide"
+    />
+    <img
+      src="https://5.imimg.com/data5/SELLER/Default/2023/1/VJ/CG/FA/60142782/classroom-projectors-from-sony.png"
+      alt=""
+      class="slide"
+    />
+
+    <span class="material-symbols-outlined prev">arrow_back_ios</span>
+    <span class="material-symbols-outlined next">arrow_forward_ios</span>
+  </div>
+
         </div>
 
         <!-- all products -->
@@ -141,7 +172,7 @@
         <%}%>
       </div> -->
 
-      <p style="margin-left:1rem; font-size: 20px; font-weight: bold;">Top Deals</p>
+      
 
   
   <div class="top-deals-container card-container" style="margin-bottom:2rem;">
