--- a/public/css/style.css
+++ b/public/css/style.css
@@ -202,9 +202,7 @@ p
 
 .slide
 {
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
+   object-fit: contain;
    flex:0 0 100%;
    transition: 1s;
 }
