--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -164,39 +164,39 @@
   </div>
 
   <!-- slider -->
-  <div class="slide-container">
+  <div class="slide-container" style="background-color: white;">
     <img
-      src="https://plus.unsplash.com/premium_photo-1680985551009-05107cd2752c?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      src="https://media.istockphoto.com/id/178716575/photo/mobile-devices.jpg?s=612x612&w=0&k=20&c=9YyINgAbcmjfY_HZe-i8FrLUS43-qZh6Sx6raIc_9vQ="
       alt=""
       class="slide"
     />
     <img
-      src="https://media.istockphoto.com/id/141944385/photo/laptops.jpg?s=612x612&w=0&k=20&c=qqWhcSA5ZJofpOvyLuyMcZTQU5Ew9Ebadk3u8iPVQVU="
+      src="https://i.dell.com/is/image/DellContent/content/dam/images/products/electronics-and-accessories/dell/pointing-devices/ms300/ms300-kbm-04-bk.psd?fmt=pjpg&pscan=auto&scl=1&wid=4141&hei=3475&qlt=100,1&resMode=sharp2&size=4141,3475&chrss=full&imwidth=5000"
       alt=""
       class="slide"
     />
     <img
-      src="https://helpdeskgeek.com/wp-content/pictures/2021/10/multi-monitor.jpeg"
+      src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/MYMC2?wid=1144&hei=1144&fmt=jpeg&qlt=90&.v=1601053171000"
       alt=""
       class="slide"
     />
     <img
-      src="https://www.pcworld.com/wp-content/uploads/2023/10/cpu-hub-100758206-orig.jpg?quality=50&strip=all"
+      src="https://m.media-amazon.com/images/I/71bEYFvV5lL.jpg"
       alt=""
       class="slide"
     />
     <img
-      src="https://i.pcmag.com/imagery/reviews/07lrPVKK2Bexf9Xi0sKRlSa-1..v1678155979.jpg"
+      src="https://nzxt.com/assets/cms/34299/1658869818-canvas-collection-hero-bezel.png?auto=format&bg=FFFFFF&fit=max&h=460&w=900"
       alt=""
       class="slide"
     />
     <img
-      src="https://static1.makeuseofimages.com/wordpress/wp-content/uploads/2018/08/best-mouse-keyboard-combos.jpg"
+      src="https://i.pcmag.com/imagery/roundups/00gpxuhAEtpruF528FIBeeh-4..v1569492695.jpg"
       alt=""
       class="slide"
     />
     <img
-      src="https://hips.hearstapps.com/hmg-prod/images/best-over-ear-headphones-1527009080.jpg"
+      src="https://5.imimg.com/data5/SELLER/Default/2023/1/VJ/CG/FA/60142782/classroom-projectors-from-sony.png"
       alt=""
       class="slide"
     />
@@ -236,7 +236,7 @@
        </div>
      -->
  
-  <p style="margin-left:1rem; font-size: 20px; font-weight: bold;">Top Deals</p>
+
 
   
   <div class="top-deals-container card-container" style="margin-bottom:2rem;">
