--- a/views/loginShow.ejs
+++ b/views/loginShow.ejs
@@ -134,19 +134,8 @@
             <div class="right-container" style="width:50%;">
 
                <div style="margin-bottom:2rem; margin-top:1rem;">
-                <h5 style='font-weight:bold; margin-bottom:1rem;'><%=item.title%></h5>
-                <p style="margin-bottom:0; line-height: normal;"><%=item.description%></p> 
-                <div class="rating-card" style="margin-top:0;">
-                  <div class="stars">
-                    <span class="star star1" data-value="1">&#9733;</span>
-                    <span class="star star2" data-value="2">&#9733;</span>
-                    <span class="star star3" data-value="3">&#9733;</span>
-                    <span class="star star4" data-value="4">&#9733;</span>
-                    <span class="star star5" data-value="5">&#9733;</span>
-                   
-                  </div>
-                  <hr>
-                </div>
+                  <h5 style='font-weight:bold; margin-bottom:1rem;'><%=item.title%></h5>
+                  <p style="margin-bottom:0; line-height: normal;"><%=item.description%></p> 
                </div>
                
 
@@ -180,11 +169,13 @@
           </div>
         
      </div>
+
        <!-- display reviews that have comes from backend in reviews variable -->
       <div style="max-width: 1400px; padding:0.5rem; margin:2rem auto; background-color:white;">
-      
+          
           <% if(reviews){%>
             <% for(let review of reviews.reviews){%>
+            <p style="font-style:italic;margin-left:1rem;font-size:large;">Top reviews...</p>
             <div  style="  margin-bottom:3rem;   margin-bottom:1rem; border-radius:8px; padding:1rem; background-color:rgb(245, 245, 245); ">
                 <!-- username container with icon -->
                  <div >
